# GPU-Accelerated-Batch-Image-Processing-with-CUDA

./: .gitignore  CMakeLists.txt  Makefile  PRESENTATION_OUTLINE.md  PROJECT_DESCRIPTION.md  README.md
data/smoke/: image_0000.pgm  image_0001.pgm  image_0002.pgm
proof/: Readme.md
scripts/: generate_pgm_dataset.py  run_sample.sh  verify_outputs.py
src/: main.cu
